Adding styles and image width

--- a/com_biblestudy/media/css/biblestudy.css
+++ b/com_biblestudy/media/css/biblestudy.css
@@ -761,7 +761,7 @@ p.expand {
     margin: 0 auto;
   }
 }
-.pagelinks {
+#pagelinks {
   background-color: #F2F2F2;
   border: 1px solid #C5C1BE;
   border-radius: 5px;
@@ -771,7 +771,7 @@ p.expand {
   padding: 5px 10px;
   position: relative;
 }
-.dropdowns {
+#dropdowns {
   background-color: #A9A9A9;
   margin: 0 -5px;
   padding: 8px 8px;
