--- a/com_biblestudy/media/less/biblestudy.less
+++ b/com_biblestudy/media/less/biblestudy.less
@@ -863,7 +863,7 @@ p.expand {
 	}
   }
 
-.pagelinks {
+#pagelinks {
 	background-color:#F2F2F2;
 	border:1px solid #C5C1BE;
 	border-radius:5px;
@@ -874,7 +874,7 @@ p.expand {
 	position:relative;
 }
 
-.dropdowns {
+#dropdowns {
 	background-color: #A9A9A9;
 	margin: 0 -5px;
 	padding: 8px 8px;
