--- a/com_biblestudy/site/models/forms/filter_sermons.xml
+++ b/com_biblestudy/site/models/forms/filter_sermons.xml
@@ -18,15 +18,6 @@
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
 		</field>
 		<field
-				name="year"
-				type="Yearlist"
-				label="JBS_CMN_SELECT_YEAR"
-				description="JBS_CMN_SELECT_YEAR_DESC"
-				onchange="this.form.submit();"
-				>
-			<option value="">JBS_CMN_SELECT_YEAR</option>
-		</field>
-		<field
 				name="book"
 				type="Booklist"
 				label="JBS_CMN_SELECT_BOOK"
@@ -46,12 +37,12 @@
 		</field>
 		<field
 				name="series"
-				type="Searieslist"
-				label="JBS_CMN_SELECT_SEARIES"
-				description="JBS_CMN_SELECT_SEARIES_DESC"
+				type="Serieslist"
+				label="JBS_CMN_SELECT_SERIES"
+				description="JBS_CMN_SELECT_SERIES_DESC"
 				onchange="this.form.submit();"
 		>
-			<option value="">JBS_CMN_SELECT_TEACHER</option>
+			<option value="">JBS_CMN_SELECT_SERIES</option>
 		</field>
 		<field
 				name="messagetype"
@@ -61,6 +52,24 @@
 				onchange="this.form.submit();"
 				>
 			<option value="">JBS_CMN_SELECT_MESSAGETYPE</option>
+		</field>
+		<field
+				name="year"
+				type="Yearlist"
+				label="JBS_CMN_SELECT_YEAR"
+				description="JBS_CMN_SELECT_YEAR_DESC"
+				onchange="this.form.submit();"
+		>
+			<option value="">JBS_CMN_SELECT_YEAR</option>
+		</field>
+		<field
+				name="topic"
+				type="Topicslist"
+				label="JBS_CMN_SELECT_TOPIC"
+				description="JBS_CMN_SELECT_TOPIC_DESC"
+				onchange="this.form.submit();"
+		>
+			<option value="">JBS_CMN_SELECT_TOPIC</option>
 		</field>
 		<field
 				name="location"
@@ -83,15 +92,6 @@
 				onchange="this.form.submit();"
 				>
 			<option value="">JOPTION_SELECT_MAX_LEVELS</option>
-		</field>
-		<field
-				name="access"
-				type="accesslevel"
-				label="JOPTION_FILTER_ACCESS"
-				description="JOPTION_FILTER_ACCESS_DESC"
-				onchange="this.form.submit();"
-				>
-			<option value="">JOPTION_SELECT_ACCESS</option>
 		</field>
 		<field
 				name="language"
