--- a/com_biblestudy/site/models/forms/filter_sermons.xml
+++ b/com_biblestudy/site/models/forms/filter_sermons.xml
@@ -9,15 +9,6 @@
 				hint="JSEARCH_FILTER"
 				/>
 		<field
-				name="published"
-				type="status"
-				label="COM_CONTENT_FILTER_PUBLISHED"
-				description="COM_CONTENT_FILTER_PUBLISHED_DESC"
-				onchange="this.form.submit();"
-				>
-			<option value="">JOPTION_SELECT_PUBLISHED</option>
-		</field>
-		<field
 				name="book"
 				type="Booklist"
 				label="JBS_CMN_SELECT_BOOK"
@@ -106,6 +97,20 @@
 	</fields>
 	</fieldset>
 	<fields name="list">
+		<field
+				name="fullordering"
+				type="list"
+				label="JBSM_CMN_LIST_FULL_ORDERING"
+				description="JBSM_CMN_LIST_FULL_ORDERING_DESC"
+				onchange="this.form.submit();"
+				default=""
+		>
+			<option value="">JBSM_GRID_SORT_BY</option>
+			<option value="study.studydate ASC">JBSM_GRID_DATE_ASC</option>
+			<option value="study.studydate DESC">JBSM_GRID_DATE_DESC</option>
+			<option value="study.studytitle ASC">JBSM_GRID_TITLE_ASC</option>
+			<option value="study.studytitle DESC">JBSM_GRID_TITLE_DESC</option>
+		</field>
 		<field
 				name="limit"
 				type="limitbox"
