--- a/com_biblestudy/media/css/biblestudy.css
+++ b/com_biblestudy/media/css/biblestudy.css
@@ -176,8 +176,10 @@ div.listingfooter ul li {
 .bsms_media_contaner div.bsms_media_file:not(:first-child) {
   padding-left: 10px;
 }
-.bsms_media_contaner span.fa-play {
+.bsms_media_contaner span.fa-play,
+.bsms_media_contaner span.icon-play {
   padding-right: 4px;
+  background-image: none;
 }
 .bsms_media_contaner {
   margin: 0;
