--- a/com_biblestudy/media/css/biblestudy.css
+++ b/com_biblestudy/media/css/biblestudy.css
@@ -726,6 +726,12 @@ p.expand {
   margin-top: -30px;
   opacity: 1;
 }
+.black {
+  color: black;
+}
+div.JBSM .img-rounded {
+  border-radius: 25px;
+}
 @media only screen and (max-width: 1100px) {
   .effects {
     padding-left: 5px;
