--- a/com_biblestudy/media/less/biblestudy.less
+++ b/com_biblestudy/media/less/biblestudy.less
@@ -822,6 +822,16 @@ p.expand {
   }
 }
 
+.black {
+  color: black;
+}
+
+div.JBSM {
+  .img-rounded {
+    border-radius: 25px;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   .effects {
     padding-left: 5px;
