Fix #817 proper Encoding of title name for injection into Javascript.

--- a/media/css/site/biblestudy.css
+++ b/media/css/site/biblestudy.css
@@ -1,1 +1,1 @@
-/home/bcordis/PhpstormProjects/Joomla-Bible-Study/media/css/biblestudy.css
+/Users/brentcordis/Documents/GitHub/Proclaim/media/css/biblestudy.min.css
