--- a/admin/models/forms/filter_messages.xml
+++ b/admin/models/forms/filter_messages.xml
@@ -85,6 +85,39 @@
 	</fieldset>
 	<fields name="list">
 		<field
+				name="fullordering"
+				type="list"
+				label="COM_CONTENT_LIST_FULL_ORDERING"
+				description="COM_CONTENT_LIST_FULL_ORDERING_DESC"
+				onchange="this.form.submit();"
+				default="stody.studydate DESC"
+				validate="options"
+		>
+			<option value="">JGLOBAL_SORT_BY</option>
+			<option value="study.ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
+			<option value="study.ordering DESC">JGRID_HEADING_ORDERING_DESC</option>
+			<option value="study.studytitle ASC">JBS_CMN_TITLE_ASC</option>
+			<option value="study.studytitle DESC">JBS_CMN_TITLE_DESC</option>
+			<option value="study.studydate ASC">JBS_CMN_STUDY_DATE_ASC</option>
+			<option value="study.studydate DESC">JBS_CMN_STUDY_DATE_DESC</option>
+			<option value="teacher.teachername ASC">JBS_CMN_TEACHERS_ASC</option>
+			<option value="teacher.teachername DESC">JBS_CMN_TEACHERS_DESC</option>
+			<option value="series.series_text ASC">JBS_CMN_SERIES_ASC</option>
+			<option value="series.series_text DESC">JBS_CMN_SERIES_DESC</option>
+			<option value="study.published ASC">JBS_CMN_PUBLISHED_ASC</option>
+			<option value="study.published DESC">JBS_CMN_PUBLISHED_DESC</option>
+			<option value="study.id ASC">JGRID_HEADING_ID_ASC</option>
+			<option value="study.id DESC">JGRID_HEADING_ID_DESC</option>
+			<option value="access_level ASC">JGRID_HEADING_ACCESS_ASC</option>
+			<option value="access_level DESC">JGRID_HEADING_ACCESS_DESC</option>
+			<option value="language ASC">JGRID_HEADING_LANGUAGE_ASC</option>
+			<option value="language DESC">JGRID_HEADING_LANGUAGE_DESC</option>
+			<option value="locations.location_text ASC">JBS_CMN_LOCATIONS_ASC</option>
+			<option value="locations.location_text DESC">JBS_CMN_LOCATIONS_DESC</option>
+			<option value="messageType.message_type ASC">JBS_CMN_MESSAGETYPE_ASC</option>
+			<option value="messageType.message_type DESC">JBS_CMN_MESSAGETYPE_DESC</option>
+		</field>
+		<field
 				name="limit"
 				type="limitbox"
 				class="input-mini"
