#849_Fix_SermonsModele This fixes the problem with Model not fallowing the image span selection correctly. Found that selection for Study was rendering the same image.

--- a/media/css/biblestudy.css
+++ b/media/css/biblestudy.css
@@ -511,6 +511,9 @@ p.popupfooter {
   margin-left: 0;
   display: inline-table;
 }
+#jbsmspan-image {
+  padding-right: 20px;
+}
 .jbsmimg {
   width: 200px;
   height: 200px;
