Fixing Media Download Global settings.

--- a/admin/models/forms/admin.xml
+++ b/admin/models/forms/admin.xml
@@ -379,7 +379,7 @@
 		</field>
 		<field name="media_use_button_icon" label="JBS_ADDON_MEDIA_USE_BUTTON"
 		       description="JBS_ADDON_MEDIA_USE_BUTTON_DESC" class="inputbox" labelclass="control-label"
-		       type="list" size="15" required="true" default="x" validate="image" message="You must choose image, icon, button or button and icon">
+		       type="list" size="15" required="true" default="x" message="You must choose image, icon, button or button and icon">
 			<option value="x">JBS_ADM_SELECT_NEW_OPTION</option>
 			<option value="">JBS_MED_NONE</option>
 			<option value="1">JBS_MED_BUTTON_ONLY</option>
